--- a/package.json
+++ b/package.json
@@ -20,20 +20,37 @@
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
-    "gulp-karma": "^0.0.5",
     "gulp-livereload": "^4.0.2",
+    "gulp-sass": "^6.0.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-watch": "^5.0.1",
     "husky": "4.2.5",
-    "karma": "^4.4.1",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-junit-reporter": "^2.0.1",
     "lint-staged": "10.2.11",
-    "test": "*",
-    "phantomjs-prebuilt": "~2.1.7",
     "prettier": "2.0.5",
-    "mocha-phantomjs-core": "2.0.1",
-    "mocha-headless-chrome": "4.0.0"
+    "puppeteer": "^24.22.3",
+    "sass": "^1.92.1"
   },
   "scripts": {
-    "test": "mocha-phantomjs -R dot http://localhost:18180/valintaperusteet-ui/test/runner.html"
+    "test": "echo \"No JS test runner wired. Use 'npx gulp test-singlerun' or run Maven tests.\" && exit 0"
+  },
+  "overrides": {
+    "braces": "3.0.3",
+    "minimist": "1.2.6",
+    "semver-regex": "3.1.3",
+    "karma": {
+      "engine.io": "3.6.0",
+      "socket.io-parser": "3.4.2"
+    },
+    "engine.io": {
+      "xmlhttprequest-ssl": "1.6.2",
+      "ws": "7.5.10"
+    },
+    "socket.io": {
+      "socket.io-parser": "3.4.2"
+    }
   }
 }
