--- a/package.json
+++ b/package.json
@@ -37,20 +37,10 @@
   "scripts": {
     "test": "echo \"No JS test runner wired. Use 'npx gulp test-singlerun' or run Maven tests.\" && exit 0"
   },
-  "overrides": {
-    "braces": "3.0.3",
-    "minimist": "1.2.6",
-    "semver-regex": "3.1.3",
-    "karma": {
-      "engine.io": "3.6.0",
-      "socket.io-parser": "3.4.2"
-    },
-    "engine.io": {
-      "xmlhttprequest-ssl": "1.6.2",
-      "ws": "7.5.10"
-    },
-    "socket.io": {
-      "socket.io-parser": "3.4.2"
+  "devEngines": {
+    "packageManager": {
+      "name": "pnpm"
     }
-  }
+  },
+  "packageManager": "pnpm@10.26.0"
 }
