--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "./src/**/*.{js,jsx,ts,tsx}": [
       "./bin/run-eslint-pre-commit.sh"
@@ -23,7 +18,7 @@
     "gulp-livereload": "^4.0.2",
     "gulp-sass": "^6.0.1",
     "gulp-uglify": "^3.0.2",
-    "husky": "4.2.5",
+    "husky": "^9.1.7",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
@@ -35,22 +30,9 @@
     "sass": "^1.92.1"
   },
   "scripts": {
-    "test": "echo \"No JS test runner wired. Use 'npx gulp test-singlerun' or run Maven tests.\" && exit 0"
+    "test": "echo \"No JS test runner wired. Use 'npx gulp test-singlerun' or run Maven tests.\" && exit 0",
+    "preinstall": "pnpx only-allow@1.2.2 pnpm",
+    "prepare": "husky"
   },
-  "overrides": {
-    "braces": "3.0.3",
-    "minimist": "1.2.6",
-    "semver-regex": "3.1.3",
-    "karma": {
-      "engine.io": "3.6.0",
-      "socket.io-parser": "3.4.2"
-    },
-    "engine.io": {
-      "xmlhttprequest-ssl": "1.6.2",
-      "ws": "7.5.10"
-    },
-    "socket.io": {
-      "socket.io-parser": "3.4.2"
-    }
-  }
+  "packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa"
 }
